kubeflow/common/istio/upstream/kubeflow-istio-resources/base/kf-istio-resources.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata: # kpt-merge: /kubeflow-gateway
  name: kubeflow-gateway
  annotations:
    internal.kpt.dev/upstream-identifier: 'networking.istio.io|Gateway|default|kubeflow-gateway'
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
